A lot of updates related to transactions